--- a/Exemplo_Morfologia.ipynb
+++ b/Exemplo_Morfologia.ipynb
@@ -54,19 +54,20 @@
         "#from https://opencv-python-tutroals.readthedocs.io/en/latest/py_tutorials/py_imgproc/py_morphological_ops/py_morphological_ops.html\n",
         "import cv2\n",
         "import numpy as np\n",
-        "#caso for usar o Google Colab com a OpenCV, usar a lib abaixo\n",
+        "#caso for usar o Google Colab com a OpenCV, usar a link abaixo\n",
         "from google.colab.patches import cv2_imshow\n"
+        "#DECLARAÇÃO DE BIBLIOTECAS\n"
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "img = cv2.imread('j.png',0)\n",
-        "img_opening = cv2.imread('j_ruido.png',0)\n",
-        "img_closing = cv2.imread('j_furos.png',0)\n",
-        "altura, largura = img.shape\n",
-        "kernel = np.ones((5,5),np.uint8)\n",
-        "print(kernel)"
+        "img = cv2.imread('j.png',0)\n", "# DECLARAÇÃO VARIAVEL img\n",
+        "img_opening = cv2.imread('j_ruido.png',0)\n", "#DECLARAÇÃO VARIAVEL img_opening\n",
+        "img_closing = cv2.imread('j_furos.png',0)\n", "#DECLARAÇÃO VARIAVEL img_closing\n",
+        "altura, largura = img.shape\n", "#DECLARAÇÃO img.shape\n",
+        "kernel = np.ones((5,5),np.uint8)\n", "#CRIAR MATRIZ 5 POR 5 E CHAMAR ELA DE karnel\n",
+        "print(kernel)" "#DAR PRINT DA MATRIZ\n"
       ],
       "metadata": {
         "id": "8whvZbKhU03S"
