--- a/Exemplo_Morfologia.ipynb
+++ b/Exemplo_Morfologia.ipynb
@@ -54,20 +54,21 @@
         "#from https://opencv-python-tutroals.readthedocs.io/en/latest/py_tutorials/py_imgproc/py_morphological_ops/py_morphological_ops.html\n",
         "import cv2\n",
         "import numpy as np\n",
-        "#caso for usar o Google Colab com a OpenCV, usar a link abaixo\n",
-        "from google.colab.patches import cv2_imshow\n"
+        "#caso for usar o Google Colab com a OpenCV, usar a lib abaixo\n",
+        "from google.colab.patches import cv2_imshow\n",
+        "\n",
         "#DECLARAÇÃO DE BIBLIOTECAS\n"
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "img = cv2.imread('j.png',0)\n", "# DECLARAÇÃO VARIAVEL img\n",
-        "img_opening = cv2.imread('j_ruido.png',0)\n", "#DECLARAÇÃO VARIAVEL img_opening\n",
-        "img_closing = cv2.imread('j_furos.png',0)\n", "#DECLARAÇÃO VARIAVEL img_closing\n",
-        "altura, largura = img.shape\n", "#DECLARAÇÃO img.shape\n",
-        "kernel = np.ones((5,5),np.uint8)\n", "#CRIAR MATRIZ 5 POR 5 E CHAMAR ELA DE karnel\n",
-        "print(kernel)" "#DAR PRINT DA MATRIZ\n"
+        "img = cv2.imread('j.png',0) # DECLARAÇÃO VARIAVEL img\n",
+        "img_opening = cv2.imread('j_ruido.png',0) #DECLARAÇÃO VARIAVEL img_opening\n",
+        "img_closing = cv2.imread('j_furos.png',0) #DECLARAÇÃO VARIAVEL img_closing\n",
+        "altura, largura = img.shape #DECLARAÇÃO img.shape\n",
+        "kernel = np.ones((5,5),np.uint8) #CRIAR MATRIZ 5 POR 5 E CHAMAR ELA DE karnel\n",
+        "print(kernel) #DAR PRINT DA MATRIZ"
       ],
       "metadata": {
         "id": "8whvZbKhU03S"
@@ -78,8 +79,8 @@
     {
       "cell_type": "code",
       "source": [
-        "erosion = cv2.erode(img,kernel,iterations = 2)\n",
-        "dilation = cv2.dilate(img,kernel,iterations = 2)"
+        "erosion = cv2.erode(img,kernel,iterations = 2) #DECLARAÇÃO DA erosion DA IMAGEM\n",
+        "dilation = cv2.dilate(img,kernel,iterations = 2) #DECLARAÇÃO DA dilation DA IMAGEM"
       ],
       "metadata": {
         "id": "RnKcRcjsU8VP"
@@ -90,9 +91,9 @@
     {
       "cell_type": "code",
       "source": [
-        "gradient = cv2.morphologyEx(img, cv2.MORPH_GRADIENT, kernel)\n",
-        "opening = cv2.morphologyEx(img_opening, cv2.MORPH_OPEN, kernel)\n",
-        "closing = cv2.morphologyEx(img_closing, cv2.MORPH_CLOSE, kernel)"
+        "gradient = cv2.morphologyEx(img, cv2.MORPH_GRADIENT, kernel) #DECLARAÇÃO DA gradient DA IMAGEM\n",
+        "opening = cv2.morphologyEx(img_opening, cv2.MORPH_OPEN, kernel) #DECLARAÇÃO DA opening DA IMAGEM\n",
+        "closing = cv2.morphologyEx(img_closing, cv2.MORPH_CLOSE, kernel) #DECLARAÇÃO DA closing DA IMAGEM"
       ],
       "metadata": {
         "id": "WvTtlQWJU-tz"
@@ -118,7 +119,9 @@
         "cv2_imshow(dilation)\n",
         "cv2_imshow(opening)\n",
         "cv2_imshow(closing)\n",
-        "cv2_imshow(gradient)"
+        "cv2_imshow(gradient)\n",
+        "\n",
+        "#MOSTRAR AS INFORMAÇÕES DAS VARIAVEIS DECLARADAS"
       ],
       "metadata": {
         "id": "iMJ7o6EgVA_r"
