--- a/Exemplo_Morfologia.ipynb
+++ b/Exemplo_Morfologia.ipynb
@@ -52,12 +52,12 @@
       "outputs": [],
       "source": [
         "#from https://opencv-python-tutroals.readthedocs.io/en/latest/py_tutorials/py_imgproc/py_morphological_ops/py_morphological_ops.html\n",
-        "import cv2\n",
-        "import numpy as np\n",
+        "import cv2 #Importação da biblioteca OpenCV\n",
+        "import numpy as np #Importação da biblioteca numpy\n",
         "#caso for usar o Google Colab com a OpenCV, usar a lib abaixo\n",
-        "from google.colab.patches import cv2_imshow\n",
+        "from google.colab.patches import cv2_imshow #Importação das bibliotecas no google Colab\n",
         "\n",
-        "#DECLARAÇÃO DE BIBLIOTECAS\n"
+        "\n"
       ]
     },
     {
@@ -106,22 +106,21 @@
       "source": [
         "'''\n",
         "#Caso usa com Python no próprio computador\n",
-        "cv2.imshow('in', img)\n",
-        "cv2.imshow('erosion_out', erosion)\n",
-        "cv2.imshow('dilation_out', dilation)\n",
-        "cv2.imshow('opening_out', opening)\n",
-        "cv2.imshow('closing_out', closing)\n",
-        "cv2.imshow('gradient_out', gradient)\n",
+        "cv2.imshow('in', img) #Demonstração da imagem normal\n",
+        "cv2.imshow('erosion_out', erosion) #Demonstração da erosion da imagem\n",
+        "cv2.imshow('dilation_out', dilation) #Demonstração da dilation da imagem\n",
+        "cv2.imshow('opening_out', opening) #Opening da imagem\n",
+        "cv2.imshow('closing_out', closing) #Closing da imagem\n",
+        "cv2.imshow('gradient_out', gradient) #Gradient da imagem\n",
         "'''\n",
         "#Caso use o Google Colab\n",
-        "cv2_imshow(img)\n",
-        "cv2_imshow(erosion)\n",
-        "cv2_imshow(dilation)\n",
-        "cv2_imshow(opening)\n",
-        "cv2_imshow(closing)\n",
-        "cv2_imshow(gradient)\n",
-        "\n",
-        "#MOSTRAR AS INFORMAÇÕES DAS VARIAVEIS DECLARADAS"
+        "cv2_imshow(img) #Demonstração da imagem normal\n",
+        "cv2_imshow(erosion) #Demonstração da erosion da imagem\n",
+        "cv2_imshow(dilation) #Demonstração da dilation da imagem\n",
+        "cv2_imshow(opening) #Opening da imagem\n",
+        "cv2_imshow(closing) #Closing da imagem\n",
+        "cv2_imshow(gradient) #Gradient da imagem\n",
+        "\n"
       ],
       "metadata": {
         "id": "iMJ7o6EgVA_r"
